--- a/docs/content/developer/stardust/claiming/foundry.mdx
+++ b/docs/content/developer/stardust/claiming/foundry.mdx
@@ -19,7 +19,7 @@ Before we start the unlock process, we have to get Iota coins due to sponsorship
 <Tabs>
 <TabItem value="rs" label="Rust">
 
-```rust file=<rootDir>/docs/examples/rust/stardust/foundry-output-claim.rs#L147-L159
+```rust file=<rootDir>/docs/examples/rust/stardust/foundry-output-claim.rs#L147-159
 ```
 
 </TabItem>
