--- a/docs/content/developer/stardust/claiming/foundry.mdx
+++ b/docs/content/developer/stardust/claiming/foundry.mdx
@@ -8,7 +8,7 @@ Before we start the unlock process, we have to get Iota coins due to sponsorship
 <Tabs>
 <TabItem value="rs" label="Rust">
 
-```rust file=<rootDir>/docs/examples/rust/stardust/foundry-output-claim.rs#L77-96
+```rust file=<rootDir>/docs/examples/rust/stardust/foundry-output-claim.rs#L77-L96
 ```
 
 </TabItem>
@@ -19,7 +19,7 @@ Before we start the unlock process, we have to get Iota coins due to sponsorship
 <Tabs>
 <TabItem value="rs" label="Rust">
 
-```rust file=<rootDir>/docs/examples/rust/stardust/foundry-output-claim.rs#L147-159
+```rust file=<rootDir>/docs/examples/rust/stardust/foundry-output-claim.rs#L147-L159
 ```
 
 </TabItem>
@@ -34,7 +34,7 @@ Before we start the unlock process, we have to get Iota coins due to sponsorship
 <Tabs>
 <TabItem value="rs" label="Rust">
 
-```rust file=<rootDir>/docs/examples/rust/stardust/foundry-output-claim.rs#L164-174
+```rust file=<rootDir>/docs/examples/rust/stardust/foundry-output-claim.rs#L164-L174
 ```
 
 </TabItem>
@@ -49,7 +49,7 @@ Applying the fitler to get `CoinManagerTreasuryCap` owned by Alias.
 <Tabs>
 <TabItem value="rs" label="Rust">
 
-```rust file=<rootDir>/docs/examples/rust/stardust/foundry-output-claim.rs#L178-216
+```rust file=<rootDir>/docs/examples/rust/stardust/foundry-output-claim.rs#L178-L216
 ```
 
 </TabItem>
@@ -63,7 +63,7 @@ Applying the fitler to get `CoinManagerTreasuryCap` owned by Alias.
 <Tabs>
 <TabItem value="rs" label="Rust">
 
-```rust file=<rootDir>/docs/examples/rust/stardust/foundry-output-claim.rs#L220-227
+```rust file=<rootDir>/docs/examples/rust/stardust/foundry-output-claim.rs#L220-L227
 ```
 
 </TabItem>
@@ -78,7 +78,7 @@ Applying the fitler to get `CoinManagerTreasuryCap` owned by Alias.
 <Tabs>
 <TabItem value="rs" label="Rust">
 
-```rust file=<rootDir>/docs/examples/rust/stardust/foundry-output-claim.rs#L231-300
+```rust file=<rootDir>/docs/examples/rust/stardust/foundry-output-claim.rs#L231-L300
 ```
 
 </TabItem>
