--- a/docs/content/developer/stardust/claiming/nft.mdx
+++ b/docs/content/developer/stardust/claiming/nft.mdx
@@ -14,7 +14,7 @@ Once an Nft Output can be unlocked the claim of its assets can start
 <Tabs>
 <TabItem value="rs" label="Rust">
 
-```rust file=<rootDir>/docs/examples/rust/stardust/nft-output-claim.rs#L54-78
+```rust file=<rootDir>/docs/examples/rust/stardust/nft-output-claim.rs#L54-L78
 ```
 
 </TabItem>
