--- a/docs/content/developer/stardust/claiming/address-unlock.mdx
+++ b/docs/content/developer/stardust/claiming/address-unlock.mdx
@@ -12,7 +12,7 @@ Before we start the unlock process, we have to get Iota coins due to sponsorship
 <Tabs>
 <TabItem value="rs" label="Rust">
 
-```rust file=<rootDir>/docs/examples/rust/stardust/address_unlock_condition.rs#L313-332
+```rust file=<rootDir>/docs/examples/rust/stardust/address_unlock_condition.rs#L313-L332
 ```
 
 </TabItem>
