Some typos and higher resolution diagram

--- a/docs/content/about-iota/tokenomics.mdx
+++ b/docs/content/about-iota/tokenomics.mdx
@@ -17,7 +17,7 @@ Three main types of participants characterize the IOTA economy:
 
 ## Core components
 
-The IOTA economy is composed of five core components:
+The IOTA economy is composed of four core components:
 
 - **[IOTA](./tokenomics/iota-token.mdx):** The IOTA token is the IOTA platform native asset.
 - **[Gas fees](./tokenomics/gas-in-iota.mdx):** Gas fees are charged on all network operations, consisting of a computation fee component and a fully rebated storage deposit component.
