--- a/docs/content/developer/stardust/claiming/foundry.mdx
+++ b/docs/content/developer/stardust/claiming/foundry.mdx
@@ -14,7 +14,7 @@ Before we start the unlock process, we have to get Iota coins due to sponsorship
 </TabItem>
 </Tabs>
 
-1. The first step is to fetch an `AliasOutput` object needed to be claimed.
+1. The first step is to fetch an `AliasOutput` object that needs to be claimed.
 
 <Tabs>
 <TabItem value="rs" label="Rust">
