--- a/docs/content/developer/stardust/claiming/foundry.mdx
+++ b/docs/content/developer/stardust/claiming/foundry.mdx
@@ -44,7 +44,7 @@ Before we start the unlock process, we have to get Iota coins due to sponsorship
 </Tabs>
 
 3. Some objects are owned by the Alias object. In this case we filter them by type using the `CoinManagerTreasuryCap` type.
-Applying the fitler to get `CoinManagerTreasuryCap` owned by Alias.
+Applying the filter to get `CoinManagerTreasuryCap` owned by Alias.
 
 <Tabs>
 <TabItem value="rs" label="Rust">
