--- a/docs/content/developer/stardust/claiming/basic.mdx
+++ b/docs/content/developer/stardust/claiming/basic.mdx
@@ -21,7 +21,7 @@ TODO
 ## Claim of a Basic Output
 Once a Basic Output can be unlocked the claim of its assets can start
 
-1. The first step is to fetch the `BasicOutput` object needed to be claimed.
+1. The first step is to fetch the `BasicOutput` object that needs to be claimed.
 
 <Tabs>
 <TabItem value="rs" label="Rust">
