--- a/docs/content/developer/stardust/claiming/nft.mdx
+++ b/docs/content/developer/stardust/claiming/nft.mdx
@@ -9,7 +9,7 @@ Check the example above, as it works the same as the [`Basic Output`](basic.mdx)
 ## Claim of an Nft Output
 Once an Nft Output can be unlocked the claim of its assets can start
 
-1. The first step is to fetch the `NftOutput` object needed to be claimed.
+1. The first step is to fetch the `NftOutput` object that needs to be claimed.
 
 <Tabs>
 <TabItem value="rs" label="Rust">
