fix: Update two references to iota.js

--- a/docs/content/developer/standards/closed-loop-token/action-request.mdx
+++ b/docs/content/developer/standards/closed-loop-token/action-request.mdx
@@ -65,7 +65,7 @@ public fun confirm_with_treasury_cap<T>(
 ): (String, u64, address, Option<address>);
 ```
 
-An example of a transaction implemented in TypeScript with iota.js, confirming an action request with a `TreasuryCap`. Here the admin account owns the `TreasuryCap`, which is used to mint and confirm the transfer request for the token:
+An example of a transaction implemented in TypeScript with @iota/iota-sdk, confirming an action request with a `TreasuryCap`. Here the admin account owns the `TreasuryCap`, which is used to mint and confirm the transfer request for the token:
 
 ```js
 let tx = new TransactionBlock();
