--- a/docs/content/developer/getting-started/local-network.mdx
+++ b/docs/content/developer/getting-started/local-network.mdx
@@ -255,4 +255,4 @@ To use the local built SDK in your project go to your project folder and execute
 pnpm add <PATH_TO_YOUR_REPO>/sdk/typescript
 ``` 
 
-and the locally compiled version of `iota/iota.js` package will be installed for your application.
+and the locally compiled version of `@iota/iota-sdk` package will be installed for your application.
