Apply suggestions from code review
Co-authored-by: Lucas Tortora <85233773+lucas-tortora@users.noreply.github.com>

--- a/docs/content/developer/iota-evm/how-tos/ERC20.mdx
+++ b/docs/content/developer/iota-evm/how-tos/ERC20.mdx
@@ -5,6 +5,7 @@ tags:
     - evm
     - solidity
     - how-to
+    - erc20
 ---
 
 import DeployAdmonition from '../../../_snippets/iota-evm/deploy_a_smart_contract.md';
