--- a/docs/content/developer/iota-evm/how-tos/core-contracts/token/create-native-token.mdx
+++ b/docs/content/developer/iota-evm/how-tos/core-contracts/token/create-native-token.mdx
@@ -4,6 +4,7 @@ image: /img/logo/WASP_logo_dark.png
 tags:
     - evm
     - how-to
+    - native-tokens
 ---
 
 import ExampleCodeIntro from '../../../../../_snippets/iota-evm/how-tos/token/example_code_intro.mdx';
