--- a/docs/content/developer/iota-evm/how-tos/core-contracts/token/introduction.mdx
+++ b/docs/content/developer/iota-evm/how-tos/core-contracts/token/introduction.mdx
@@ -3,6 +3,8 @@ description: How to handle native tokens on L2 and use them as ERC20
 image: /img/logo/WASP_logo_dark.png
 tags:
   - evm
+  - erc20
+  - native-token
   - how-to
 ---
 import DocCardList from '@theme/DocCardList';
