--- a/docs/content/developer/advanced/iota-repository.mdx
+++ b/docs/content/developer/advanced/iota-repository.mdx
@@ -2,7 +2,8 @@
 description: "A guide to familiarizing yourself with the IOTA repository, including branch and network structure."
 tags:
   - explanation
-  - setup
+  - repository
+  - crates
 ---
 
 # The IOTA Repository
