--- a/docs/content/developer/getting-started/get-address.mdx
+++ b/docs/content/developer/getting-started/get-address.mdx
@@ -3,6 +3,7 @@ description: Guide to creating an IOTA address for accounts and transactions.
 tags:
     - explanation
     - cli
+    - address
 ---
 # Create an Address
 
