--- a/docs/content/developer/getting-started/get-coins.mdx
+++ b/docs/content/developer/getting-started/get-coins.mdx
@@ -1,6 +1,6 @@
 ---
 description: Get test IOTA tokens using the IOTA CLI, SDK, or cURL.
-tags: [how-to, cli, typescript, sdk]
+tags: [how-to, cli, typescript, sdk, faucet]
 ---
 
 import AlphaNet from "../../_snippets/alphanet.mdx";
