--- a/docs/content/developer/getting-started/local-network.mdx
+++ b/docs/content/developer/getting-started/local-network.mdx
@@ -1,6 +1,6 @@
 ---
 description: Guide to setting up and using a local IOTA network for development and testing.
-tags: [ how-to, install, setup, cli, typescript, sdk ]
+tags: [ how-to, install, setup, cli, typescript, sdk, testing ]
 ---
 # Local Development
 
