--- a/docs/content/developer/iota-evm/how-tos/ERC721.mdx
+++ b/docs/content/developer/iota-evm/how-tos/ERC721.mdx
@@ -5,6 +5,7 @@ tags:
     - evm
     - solidity
     - how-to
+    - erc721
 ---
 
 import DeployAdmonition from '../../../_snippets/iota-evm/deploy_a_smart_contract.md';
