--- a/docs/content/developer/iota-evm/how-tos/core-contracts/token/register-token.mdx
+++ b/docs/content/developer/iota-evm/how-tos/core-contracts/token/register-token.mdx
@@ -3,6 +3,7 @@ description: How to register a native token as ERC20
 image: /img/logo/WASP_logo_dark.png
 tags:
     - evm
+    - native-token
     - how-to
 ---
 
