Add schema, solo and testing tags

--- a/docs/content/developer/iota-evm/explanations/context.mdx
+++ b/docs/content/developer/iota-evm/explanations/context.mdx
@@ -2,6 +2,7 @@
 description: The call context is a predefined parameter to each smart contract function, which allows you to access the functionality that the call environment provides.
 tags:
   - explanation
+  - evm
 image: /img/logo/WASP_logo_dark.png
 ---
 
