--- a/docs/content/developer/iota-evm/getting-started/networks-and-chains.mdx
+++ b/docs/content/developer/iota-evm/getting-started/networks-and-chains.mdx
@@ -1,9 +1,10 @@
 ---
 description: Networks and endpoints in the IOTA ecosystem.
 tags:
-    - mainnet
-    - testnet
-    - reference
+  - mainnet
+  - testnet
+  - reference
+  - evm
 ---
 
 import { AddToMetaMaskButton } from '@theme/AddToMetaMaskButton';
