--- a/docs/content/developer/iota-evm/how-tos/deploy-a-smart-contract.mdx
+++ b/docs/content/developer/iota-evm/how-tos/deploy-a-smart-contract.mdx
@@ -1,10 +1,11 @@
 ---
+description: Learn how to deploy smart contracts to IOTA EVM,  Shimmer EVM and EVM
+  Testnet using popular tools like Remix and Hardhat.
 tags:
-    - how-to
-    - evm
-    - getting-started
+  - how-to
+  - evm
+  - getting-started
 image: /img/logo/WASP_logo_dark.png
-description: 'Learn how to deploy smart contracts to IOTA EVM,  Shimmer EVM and EVM Testnet using popular tools like Remix and Hardhat.'
 ---
 
 import { AddToMetaMaskButton } from '@theme/AddToMetaMaskButton';
