--- a/docs/content/developer/iota-evm/schema/how-tos/access.mdx
+++ b/docs/content/developer/iota-evm/schema/how-tos/access.mdx
@@ -1,8 +1,10 @@
 ---
-description: "This article explains how to define access controls for functions using the optional 'access' subsection in the schema definition file."
+description: This article explains how to define access controls for functions using the optional 'access' subsection in the schema definition file.
+image: /img/logo/WASP_logo_dark.png
 tags:
   - how-to
-image: /img/logo/WASP_logo_dark.png
+  - evm
+  - schema
 ---
 
 # Limit Access
