--- a/docs/content/developer/iota-evm/schema/how-tos/funcs.mdx
+++ b/docs/content/developer/iota-evm/schema/how-tos/funcs.mdx
@@ -1,8 +1,10 @@
 ---
+description: The code generated for Funcs will be able to inspect and modify the smart contract state, whereas the code generated for Views will only be able to inspect the state.
+image: /img/logo/WASP_logo_dark.png
 tags:
   - how-to
-image: /img/logo/WASP_logo_dark.png
-description: The code generated for Funcs will be able to inspect and modify the smart contract state, whereas the code generated for Views will only be able to inspect the state.
+  - evm
+  - schema
 ---
 
 import Tabs from '@theme/Tabs';
