--- a/docs/content/developer/iota-evm/schema/how-tos/results.mdx
+++ b/docs/content/developer/iota-evm/schema/how-tos/results.mdx
@@ -1,8 +1,10 @@
 ---
+description: Understand how to outline function results using the 'results' subsection and how the Schema Tool aids in this process.
 image: /img/logo/WASP_logo_dark.png
-description: "Understand how to outline function results using the 'results' subsection and how the Schema Tool aids in this process."
 tags:
   - how-to
+  - evm
+  - schema
 ---
 
 import Tabs from '@theme/Tabs';
