--- a/docs/content/developer/iota-evm/schema/how-tos/structs.mdx
+++ b/docs/content/developer/iota-evm/schema/how-tos/structs.mdx
@@ -1,9 +1,10 @@
 ---
+description: You can use structs directly as a type in state storage definitions and the schema tool will automatically generate the proxy code to access it properly.
+image: /img/logo/WASP_logo_dark.png
 tags:
   - how-to
-description: You can use structs directly as a type in state storage definitions and the schema tool will automatically generate the proxy code to access it properly.
-
-image: /img/logo/WASP_logo_dark.png
+  - evm
+  - schema
 ---
 
 import Tabs from '@theme/Tabs';
