--- a/docs/content/developer/iota-evm/schema/how-tos/thunks.mdx
+++ b/docs/content/developer/iota-evm/schema/how-tos/thunks.mdx
@@ -1,8 +1,10 @@
 ---
-description: 'Learn about thunk functions and how the Schema Tool uses them to facilitate smart contract function calls.'
+description: Learn about thunk functions and how the Schema Tool uses them to facilitate smart contract function calls.
+image: /img/logo/WASP_logo_dark.png
 tags:
   - how-to
-image: /img/logo/WASP_logo_dark.png
+  - evm
+  - schema
 ---
 
 import Tabs from '@theme/Tabs';
