--- a/docs/content/developer/iota-evm/schema/how-tos/usage.mdx
+++ b/docs/content/developer/iota-evm/schema/how-tos/usage.mdx
@@ -1,8 +1,10 @@
 ---
-tags:
-  - how-to
 description: The `schema` tool will assist in creating a smart contract as unobtrusively as possible.
 image: /img/logo/WASP_logo_dark.png
+tags:
+  - how-to
+  - evm
+  - schema
 ---
 
 import Tabs from '@theme/Tabs';
