--- a/docs/content/developer/iota-evm/schema/how-tos/views.mdx
+++ b/docs/content/developer/iota-evm/schema/how-tos/views.mdx
@@ -1,9 +1,10 @@
 ---
-description: "Explore the characteristics and constraints of view-only functions in smart contracts,
-illustrated through a 'getFactor' function example."
+description: Explore the characteristics and constraints of view-only functions in smart contracts, illustrated through a 'getFactor' function example.
+image: /img/logo/WASP_logo_dark.png
 tags:
   - how-to
-image: /img/logo/WASP_logo_dark.png
+  - evm
+  - schema
 ---
 
 import Tabs from '@theme/Tabs';
