--- a/docs/content/developer/iota-evm/schema/how-tos/yaml.mdx
+++ b/docs/content/developer/iota-evm/schema/how-tos/yaml.mdx
@@ -1,8 +1,10 @@
 ---
-tags:
-  - how-to
 description: the syntax of a schema definition file will be described here.
 image: /img/logo/WASP_logo_dark.png
+tags:
+  - how-to
+  - evm
+  - schema
 ---
 
 # YAML Schema Definition: Level 1 Attributes
