--- a/docs/content/developer/iota-evm/solo/how-tos/examples.mdx
+++ b/docs/content/developer/iota-evm/solo/how-tos/examples.mdx
@@ -1,10 +1,11 @@
 ---
+description: Use the SoloContext to create full-blown tests for the dividend example smart contract.
+image: /img/logo/WASP_logo_dark.png
 tags:
   - how-to
-
-description: Use the SoloContext to create full-blown tests for the dividend example smart contract.
-
-image: /img/logo/WASP_logo_dark.png
+  - evm
+  - solo
+  - testing
 ---
 
 import Tabs from '@theme/Tabs';
