--- a/docs/content/developer/iota-evm/solo/how-tos/timelock.mdx
+++ b/docs/content/developer/iota-evm/solo/how-tos/timelock.mdx
@@ -1,9 +1,11 @@
 ---
-tags:
-  - how-to
-
 description: You can post a time-locked request by using the Delay() method. You can mint NFTs by using the MintNFT() method.
 image: /img/logo/WASP_logo_dark.png
+tags:
+  - how-to
+  - evm
+  - solo
+  - testing
 ---
 
 import Tabs from '@theme/Tabs';
