--- a/docs/content/developer/iota-evm/introduction.mdx
+++ b/docs/content/developer/iota-evm/introduction.mdx
@@ -1,6 +1,5 @@
 ---
-description: 'The current release of IOTA Smart Contracts also has experimental support for EVM/Solidity, providing
-limited compatibility with existing smart contracts and tooling from other EVM based chains like Ethereum.'
+description: The current release of IOTA Smart Contracts also has experimental support for EVM/Solidity, providing limited compatibility with existing smart contracts and tooling from other EVM based chains like Ethereum.
 image: /img/logo/WASP_logo_dark.png
 tags:
   - evm
