--- a/docs/content/developer/iota-evm/schema/how-tos/call.mdx
+++ b/docs/content/developer/iota-evm/schema/how-tos/call.mdx
@@ -1,8 +1,10 @@
 ---
-description: "Explore how synchronous function calls work between smart contracts, highlighting the role of function descriptors in parameter and token passage, and understanding the ISC host's role in this procedure."
+description: Explore how synchronous function calls work between smart contracts, highlighting the role of function descriptors in parameter and token passage, and understanding the ISC host's role in this procedure.
+image: /img/logo/WASP_logo_dark.png
 tags:
   - how-to
-image: /img/logo/WASP_logo_dark.png
+  - evm
+  - schema
 ---
 
 import Tabs from '@theme/Tabs';
