--- a/docs/content/developer/iota-evm/schema/how-tos/events.mdx
+++ b/docs/content/developer/iota-evm/schema/how-tos/events.mdx
@@ -1,8 +1,10 @@
 ---
-description: "This article outlines how to trigger events in smart contracts utilizing ISC sandbox's ScFuncContext and the Schema Tool for structured events."
+description: This article outlines how to trigger events in smart contracts utilizing ISC sandbox's ScFuncContext and the Schema Tool for structured events.
+image: /img/logo/WASP_logo_dark.png
 tags:
   - how-to
-image: /img/logo/WASP_logo_dark.png
+  - evm
+  - schema
 ---
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
