--- a/docs/content/developer/iota-evm/schema/how-tos/funcdesc.mdx
+++ b/docs/content/developer/iota-evm/schema/how-tos/funcdesc.mdx
@@ -1,8 +1,10 @@
 ---
-tags:
-  - how-to
 description: The schema tool provides us with an easy way to get access to smart contract functions through function descriptors, which allow you to initiate the function by calling it synchronously, or posting a request to run it asynchronously.
 image: /img/logo/WASP_logo_dark.png
+tags:
+  - how-to
+  - evm
+  - schema
 ---
 
 import Tabs from '@theme/Tabs';
