--- a/docs/content/developer/iota-evm/schema/how-tos/init.mdx
+++ b/docs/content/developer/iota-evm/schema/how-tos/init.mdx
@@ -1,9 +1,10 @@
 ---
-tags:
-  - how-to
-
 description: The init function will automatically be called immediately after the first time the contract has been deployed to the VM. This is a one-time initialization call, meant to be performed by the contract deployment mechanism.
 image: /img/logo/WASP_logo_dark.png
+tags:
+  - how-to
+  - evm
+  - schema
 ---
 
 import Tabs from '@theme/Tabs';
