--- a/docs/content/developer/iota-evm/schema/how-tos/params.mdx
+++ b/docs/content/developer/iota-evm/schema/how-tos/params.mdx
@@ -1,8 +1,10 @@
 ---
-description: "Learn how to define function parameters using the 'params' subsection, and how the Schema Tool facilitates this process."
+description: Learn how to define function parameters using the 'params' subsection, and how the Schema Tool facilitates this process.
+image: /img/logo/WASP_logo_dark.png
 tags:
   - how-to
-image: /img/logo/WASP_logo_dark.png
+  - evm
+  - schema
 ---
 
 import Tabs from '@theme/Tabs';
