--- a/docs/content/developer/iota-evm/schema/how-tos/post.mdx
+++ b/docs/content/developer/iota-evm/schema/how-tos/post.mdx
@@ -1,8 +1,10 @@
 ---
-tags:
-  - how-to
 description: Asynchronous function calls between smart contracts are posted as requests on the Tangle. They allow you to invoke any smart contract function that is not a View on any smart contract chain.
 image: /img/logo/WASP_logo_dark.png
+tags:
+  - how-to
+  - evm
+  - schema
 ---
 
 import Tabs from '@theme/Tabs';
