--- a/docs/content/developer/iota-evm/schema/how-tos/spec.mdx
+++ b/docs/content/developer/iota-evm/schema/how-tos/spec.mdx
@@ -1,8 +1,10 @@
 ---
-tags:
-  - how-to
 description: The spec of schema tool and how to develop schema tool.
 image: /img/logo/WASP_logo_dark.png
+tags:
+  - how-to
+  - evm
+  - schema
 ---
 
 # Spec
