--- a/docs/content/developer/iota-evm/schema/how-tos/state.mdx
+++ b/docs/content/developer/iota-evm/schema/how-tos/state.mdx
@@ -1,9 +1,10 @@
 ---
-tags:
-    - how-to
 description: The smart contract state storage on the host consists of a single key/value map, as long as you access the data in the same way that you used to store it, you will always get valid data back.
-
 image: /img/logo/WASP_logo_dark.png
+tags:
+  - how-to
+  - evm
+  - schema
 ---
 
 import Tabs from '@theme/Tabs';
