--- a/docs/content/developer/iota-evm/schema/how-tos/transfers.mdx
+++ b/docs/content/developer/iota-evm/schema/how-tos/transfers.mdx
@@ -1,8 +1,10 @@
 ---
-description: 'Explore methods in the Call Context that facilitate the handling and transfer of asset balances in smart contracts using the `dividend` example.'
+description: Explore methods in the Call Context that facilitate the handling and transfer of asset balances in smart contracts using the `dividend` example.
+image: /img/logo/WASP_logo_dark.png
 tags:
   - how-to
-image: /img/logo/WASP_logo_dark.png
+  - evm
+  - schema
 ---
 
 import Tabs from '@theme/Tabs';
