--- a/docs/content/developer/iota-evm/schema/how-tos/typedefs.mdx
+++ b/docs/content/developer/iota-evm/schema/how-tos/typedefs.mdx
@@ -1,9 +1,10 @@
 ---
-tags:
-    - how-to
 description: You can add a typedefs section to the schema definition file, where you can define a single type name for a container type. This way you can easily create containers that contain container types.
-
 image: /img/logo/WASP_logo_dark.png
+tags:
+  - how-to
+  - evm
+  - schema
 ---
 
 import Tabs from '@theme/Tabs';
