--- a/docs/content/developer/iota-evm/schema/proxies.mdx
+++ b/docs/content/developer/iota-evm/schema/proxies.mdx
@@ -1,8 +1,12 @@
 ---
+description: As there is no way for the Wasm code to access any memory outside its
+  own memory space, the WasmLib interface provides a number of proxies to make accessing
+  data within the ISC sandbox as seamless as possible.
+image: /img/iota-evm/wasm_vm/Proxies.png
 tags:
   - how-to
-description: As there is no way for the Wasm code to access any memory outside its own memory space, the WasmLib interface provides a number of proxies to make accessing data within the ISC sandbox as seamless as possible.
-image: /img/iota-evm/wasm_vm/Proxies.png
+  - evm
+  - schema
 ---
 # Data Access Proxies
 
