--- a/docs/content/developer/stardust/claiming/address-unlock.mdx
+++ b/docs/content/developer/stardust/claiming/address-unlock.mdx
@@ -47,7 +47,7 @@ Before we start the unlock process, we have to get Iota coins due to sponsorship
 </Tabs>
 
 3. Some objects are owned by the Alias object. In this case we filter them by type using the `NftOutput` type.
-Applying the filter to get `Nft output` owned by Alias.
+Applying the filter to get `NftOutput`s owned by the `Alias`.
 
 <Tabs>
 <TabItem value="rs" label="Rust">
