--- a/docs/content/developer/stardust/claiming/address-unlock.mdx
+++ b/docs/content/developer/stardust/claiming/address-unlock.mdx
@@ -46,7 +46,7 @@ Before we start the unlock process, we have to get Iota coins due to sponsorship
 </TabItem>
 </Tabs>
 
-3. Some objects are owned by the Alias object. In this case we filter them by type using the `NftOutput` type.
+3. Some objects are owned by the `Alias` object. In this case we filter them by type using the `NftOutput` type tag.
 Applying the filter to get `NftOutput`s owned by the `Alias`.
 
 <Tabs>
