--- a/docs/content/developer/stardust/claiming/address-unlock.mdx
+++ b/docs/content/developer/stardust/claiming/address-unlock.mdx
@@ -32,7 +32,7 @@ Before we start the unlock process, we have to get Iota coins due to sponsorship
 </TabItem>
 </Tabs>
 
-2. By using the dynamic field function with the `alias` filter, we gather the alias object itself.
+2. By using the dynamic field function with the "alias" dynamic field key filter, we gather the `Alias` object itself.
 
 <Tabs>
 <TabItem value="rs" label="Rust">
