--- a/docs/content/developer/stardust/claiming/address-unlock.mdx
+++ b/docs/content/developer/stardust/claiming/address-unlock.mdx
@@ -18,7 +18,7 @@ Before we start the unlock process, we have to get Iota coins due to sponsorship
 </TabItem>
 </Tabs>
 
-1. The first step is to fetch the `AliasOutput` object that needs to be claimed.
+1. The first step is to fetch the `AliasOutput` object that is needed for claiming the `NftOutput`.
 
 <Tabs>
 <TabItem value="rs" label="Rust">
