--- a/docs/content/developer/stardust/claiming/address-unlock.mdx
+++ b/docs/content/developer/stardust/claiming/address-unlock.mdx
@@ -7,7 +7,7 @@ In Stardust outputs presented an Address Unlock Condition or similarly, in the c
 ## Claim of an Output owned by another Alias/Nft Output
 
 
-For this example, we're using `Alias output` as it has an `Alias object` that owns `Nft output`.
+For this example, we're using an `AliasOutput` to extract an `Alias` object that owns an `NftOutput`.
 
 Before we start the unlock process, we have to get Iota coins due to sponsorship flow:
 <Tabs>
