--- a/docs/content/developer/stardust/claiming/foundry.mdx
+++ b/docs/content/developer/stardust/claiming/foundry.mdx
@@ -72,7 +72,7 @@ Applying the filter to get `CoinManagerTreasuryCap` owned by Alias.
 </TabItem>
 </Tabs>
 
-5. Create PTB that claims the CoinManagerTreasuryCap related to the `Foundry Output` from the `Alias Output` using `unlock_alias_address_owned_coinmanager_treasury` function.
+5. Create a PTB that claims the `CoinManagerTreasuryCap` related to the Foundry Output from the `AliasOutput` using the `unlock_alias_address_owned_coinmanager_treasury` function.
 
 
 <Tabs>
