--- a/docs/content/developer/stardust/claiming/foundry.mdx
+++ b/docs/content/developer/stardust/claiming/foundry.mdx
@@ -58,7 +58,7 @@ Applying the filter to get `CoinManagerTreasuryCap` owned by Alias.
 </TabItem>
 </Tabs>
 
-4. Extract the foundry token type from manager treasury cap object
+4. Since each native token has its own package, a Foundry's native token as a dedicated `OTW`. Here we need to extract this `OTW` from the `CoinManagerTreasuryCap` object.
 
 <Tabs>
 <TabItem value="rs" label="Rust">
