--- a/docs/content/developer/stardust/claiming/foundry.mdx
+++ b/docs/content/developer/stardust/claiming/foundry.mdx
@@ -45,7 +45,7 @@ Before we start the unlock process, we have to get Iota coins due to sponsorship
 </TabItem>
 </Tabs>
 
-3. Some objects are owned by the Alias object. In this case we filter them by type using the `CoinManagerTreasuryCap` type.
+3. Some objects are owned by the `Alias` object (check the [Output unlockable by an Alias/Nft Address](address-unlock-condition.mdx) page for more info). In this case we filter them by type using the `CoinManagerTreasuryCap` type tag.
 
 <Tabs>
 <TabItem value="rs" label="Rust">
