--- a/docs/content/about-iota/tokenomics/proof-of-stake.mdx
+++ b/docs/content/about-iota/tokenomics/proof-of-stake.mdx
@@ -26,7 +26,7 @@ Following these actions, the protocol computes the total amount of stake as the 
 
 During each epoch: Users submit transactions to the IOTA platform and validators process them. 
 For each transaction, users pay the associated computation and storage deposits. 
-In cases where users delete previous transaction data, users obtain a rebate of their storage deposit. 
+In cases where users delete previous objects or data within objects, users obtain a rebate of their storage deposit. 
 Validators observe the behavior of other validators and evaluate each other's performance.
 
 At the end of each epoch: The protocol distributes stake rewards to participants of the DPoS mechanism. 
