--- a/docs/content/about-iota/tokenomics/proof-of-stake.mdx
+++ b/docs/content/about-iota/tokenomics/proof-of-stake.mdx
@@ -19,8 +19,8 @@ The IOTA economic model works as follows.
 
 At the beginning of each epoch, two important events happen:
 
-- IOTA holders stake (some) of their tokens to validators and a new [committee](../../operator/validator-committee.mdx) is formed.
-- The reference gas prices are set as described in [IOTA Gas Pricing](./gas-pricing.mdx).
+- The delegated tokens for a given validator are added up and a new [committee](../../operator/validator-committee.mdx) is formed.
+- The reference gas price, set as described in [IOTA Gas Pricing](./gas-pricing.mdx), is updated.
 
 Following these actions, the protocol computes the total amount of stake as the sum of staked IOTA.
 
